[gd_scene load_steps=80 format=2]

[ext_resource path="res://Sprite/Boss1_1.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemy_Hitbox.gd" type="Script" id=2]
[ext_resource path="res://Enemies/Bosses/Hamrayah.gd" type="Script" id=3]
[ext_resource path="res://Sprite/BasicGolemEnemy.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 896, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 768, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 640, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 384, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 384, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 640, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 768, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 896, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 896, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 384, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 384, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=28]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": false,
"name": "Demerging",
"speed": 16.0
}, {
"frames": [ SubResource( 9 ) ],
"loop": true,
"name": "Dead",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": false,
"name": "Emerging",
"speed": 16.0
}, {
"frames": [ SubResource( 18 ) ],
"loop": true,
"name": "Default",
"speed": 5.0
}, {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": false,
"name": "MouthClose",
"speed": 10.0
}, {
"frames": [ SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": false,
"name": "MouthOpen",
"speed": 10.0
}, {
"frames": [ SubResource( 27 ) ],
"loop": true,
"name": "Closed",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 896, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 768, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 640, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 384, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 384, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 640, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 768, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 896, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 896, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 896, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 896, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 384, 128, 128 )

[sub_resource type="SpriteFrames" id=49]
animations = [ {
"frames": [ SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ) ],
"loop": false,
"name": "Demerging",
"speed": 16.0
}, {
"frames": [  ],
"loop": true,
"name": "Dead",
"speed": 5.0
}, {
"frames": [ SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ) ],
"loop": false,
"name": "Emerging",
"speed": 16.0
}, {
"frames": [ SubResource( 45 ) ],
"loop": true,
"name": "Default",
"speed": 5.0
}, {
"frames": [ SubResource( 46 ) ],
"loop": false,
"name": "MouthClose",
"speed": 10.0
}, {
"frames": [ SubResource( 47 ) ],
"loop": false,
"name": "MouthOpen",
"speed": 10.0
}, {
"frames": [ SubResource( 48 ) ],
"loop": true,
"name": "Closed",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 896, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 768, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 640, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 384, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=60]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 384, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=62]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=63]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 640, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=64]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 768, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=65]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 896, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=66]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 896, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=67]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 896, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=68]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 896, 384, 128, 128 )

[sub_resource type="SpriteFrames" id=69]
animations = [ {
"frames": [ SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ) ],
"loop": false,
"name": "Demerging",
"speed": 16.0
}, {
"frames": [  ],
"loop": true,
"name": "Dead",
"speed": 5.0
}, {
"frames": [ SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ) ],
"loop": false,
"name": "Emerging",
"speed": 16.0
}, {
"frames": [ SubResource( 66 ) ],
"loop": true,
"name": "Default",
"speed": 5.0
}, {
"frames": [ SubResource( 67 ) ],
"loop": false,
"name": "MouthClose",
"speed": 10.0
}, {
"frames": [ SubResource( 68 ) ],
"loop": false,
"name": "MouthOpen",
"speed": 10.0
}, {
"frames": [ SubResource( 48 ) ],
"loop": true,
"name": "Closed",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=70]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=71]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 64, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=72]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 128, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=73]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 192, 128, 64, 64 )

[sub_resource type="SpriteFrames" id=74]
animations = [ {
"frames": [ SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ) ],
"loop": true,
"name": "Spin",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=75]
extents = Vector2( 29.4132, 59.029 )

[node name="Hamrayah" type="Node2D"]
script = ExtResource( 3 )

[node name="GolemSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 1.25, 1.25 )
frames = SubResource( 28 )
animation = "Dead"
playing = true

[node name="Cracks2" type="AnimatedSprite" parent="."]
visible = false
scale = Vector2( 1.25, 1.25 )
frames = SubResource( 49 )
animation = "Dead"
playing = true

[node name="Cracks1" type="AnimatedSprite" parent="."]
visible = false
scale = Vector2( 1.25, 1.25 )
frames = SubResource( 69 )
animation = "Dead"
playing = true

[node name="ringSprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -40 )
scale = Vector2( 1.5, 1.75 )
frames = SubResource( 74 )
animation = "Spin"
frame = 1
playing = true

[node name="ringSprite2" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -22 )
scale = Vector2( 1.5, 1.75 )
frames = SubResource( 74 )
animation = "Spin"
frame = 1
playing = true

[node name="ringSprite3" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -2 )
scale = Vector2( 1.5, 1.75 )
frames = SubResource( 74 )
animation = "Spin"
frame = 1
playing = true

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="PauseTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="UndergroundTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="GunBurstTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="StunnedTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="ExplosionTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="HurtTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -18.765 )
shape = SubResource( 75 )

[node name="Shooter" type="Position2D" parent="."]
position = Vector2( 0, 8.98008 )
[connection signal="animation_finished" from="GolemSprite" to="." method="_on_GolemSprite_animation_finished"]
[connection signal="animation_finished" from="Cracks2" to="." method="_on_GolemSprite_animation_finished"]
[connection signal="animation_finished" from="Cracks1" to="." method="_on_GolemSprite_animation_finished"]
[connection signal="timeout" from="ShotTimer" to="." method="_on_ShotTimer_timeout"]
[connection signal="timeout" from="PauseTimer" to="." method="_on_PauseTimer_timeout"]
[connection signal="timeout" from="UndergroundTimer" to="." method="_on_UndergroundTimer_timeout"]
[connection signal="timeout" from="GunBurstTimer" to="." method="_on_GunBurstTimer_timeout"]
[connection signal="timeout" from="StunnedTimer" to="." method="_on_StunnedTimer_timeout"]
[connection signal="timeout" from="ExplosionTimer" to="." method="_on_Explosion_Timer_timeout"]
[connection signal="timeout" from="HurtTimer" to="." method="_on_HurtTimer_timeout"]
